--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "params": {
 
-        "gmail-user": "raunakmahapatra2002@gmail.com",
-        "gmail-password": "raunak22mahapatra"
+        "gmail-user": "youremail",
+        "gmail-password": "yourpassword"
 
     }
 
